--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -44,7 +44,7 @@
                   <input class="input is-medium" type="email" placeholder="Email">
                 </div>
               </div>
-              <button class="button is-block is-info is-fullwidth is-medium">Submit</button>
+              <button class="button is-block is-info is-fullwidth is-medium red lighten-1">Registrame</button>
               <br />
               <small><em>Lorem ipsum dolor sit amet consectetur.</em></small>
             </form>
