--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,13 +8,11 @@
             <h1 class="title" style="color: gray;">Bienvenido al administrador de Kimirina App</h1><br>
           </div>
         </div>
-        <div id="app" class="row columns is-multiline">
-          <div *ngFor="let cardData of cardsData" class="column is-3">
-            <div class="card large">
-              <div class="card-image is-16by9">
-                <figure class="image">
-                  <img src="{{cardData.image}}" alt="Image">
-                </figure>
+        <div id="app" class="row">
+          <div *ngFor="let cardData of cardsData" class="col s3">
+            <div class="card">
+              <div class="card-image">
+                  <img src="{{cardData.image}}">
               </div>
               <div class="card-content">
                 <div class="media">
@@ -26,23 +24,15 @@
                 </div>
                 <div class="content">
                     {{cardData.content}}
-                  <div class="background-icon"><span class="icon-twitter"></span></div>
-                  <hr>
-                    <button class="button is-info is-outlined" [routerLink]="[cardData.redirect]">Ingresar</button>
                 </div>
+              </div>
+              <div class="card-action">
+                <button class="button is-info is-outlined" [routerLink]="[cardData.redirect]">Ingresar</button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <footer class="footer">
-        <div class="content has-text-centered">
-          <p>
-            <strong>Kimirina App</strong> es parte de la organización <a href="https://jgthms.com">Kimirina</a> la cual se dedica a combatir el
-            <a href="http://opensource.org/licenses/mit-license.php">VIH</a> en el Ecuador y cualquier otra enfermedad de 
-             <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Transmisión sexual</a>.
-          </p>
-        </div>
-      </footer>
+    <app-footer></app-footer>
   </body>
