--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -1,48 +1,129 @@
 <app-navbar></app-navbar>
 
 <div class="container">
-<h1 class="title is-2">Lista de usuarios</h1>
-<a class="btn-floating btn waves-effect waves-light green accent-3" (click)="addUsuarioForm()"><i class="material-icons">add</i></a>
-<button class="button is-dark is-outlined" style="margin-left: 5px;" [routerLink]="['/home']"><i class="fas fa-arrow-left" style="margin-right: 2px;"></i> Regresar</button>
-<hr>
+  <h1 class="title is-2">Lista de usuarios</h1>
+  <a class="btn-floating btn waves-effect waves-light green accent-3" (click)="addUsuarioForm()"><i class="material-icons">add</i></a>
+  <a class="btn-floating btn waves-effect waves-light modal-trigger purple accent-3" href="#modal1"><i class="material-icons">add</i></a>
+  <button class="button is-dark is-outlined" style="margin-left: 5px;" [routerLink]="['/home']"><i class="fas fa-arrow-left" style="margin-right: 2px;"></i> Regresar</button>
+  <hr>
 
 
-<div class="content">
+  <div class="content">
 
-<table class="responsive-table highlight">
-    <thead>
-      <tr>
-        <th>Nº</th>
-        <th>Nombre</th>
-        <th>Correo</th>
-        <th>Edad</th>
-        <th>Genero</th>
-        <th>Rol</th>
-        <th>Operaciones</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let usuario of usuarioService.usuarios | paginate: {itemsPerPage: 10, currentPage: paginaActual}; index as i">
-        <th>{{i+1}}</th>
-        <td>{{usuario.nombre}}</td>
-        <td>{{usuario.correo}}</td>
-        <td>{{usuario.edad}}</td>
-        <td>{{usuario.genero}}</td>
-        <td>{{usuario.rol}}</td>
-        <td>
-          <a class="btn-floating btn-small waves-effect waves-light yellow" (click)="updUsuarioForm(usuario)"><i class="material-icons">mode_edit</i></a>
-          <a class="btn-floating btn-small waves-effect waves-light red accent-4" (click)="deleteUsuario(usuario._id)"><i class="material-icons">delete</i></a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <table class="responsive-table highlight">
+      <thead>
+        <tr>
+          <th>Nº</th>
+          <th>Nombre</th>
+          <th>Correo</th>
+          <th>Edad</th>
+          <th>Genero</th>
+          <th>Rol</th>
+          <th>Operaciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let usuario of usuarioService.usuarios | paginate: {itemsPerPage: 10, currentPage: paginaActual}; index as i">
+          <th>{{i+1}}</th>
+          <td>{{usuario.nombre}}</td>
+          <td>{{usuario.correo}}</td>
+          <td>{{usuario.edad}}</td>
+          <td>{{usuario.genero}}</td>
+          <td>{{usuario.rol}}</td>
+          <td>
+            <a class="btn-floating btn-small waves-effect waves-light yellow" (click)="updUsuarioForm(usuario)"><i class="material-icons">mode_edit</i></a>
+            <a class="btn-floating btn-small waves-effect waves-light red accent-4" (click)="deleteUsuario(usuario._id)"><i class="material-icons">delete</i></a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
-  <pagination-controls (pageChange)="paginaActual = $event"></pagination-controls>
+    <pagination-controls (pageChange)="paginaActual = $event"></pagination-controls>
 
+  </div>
 </div>
-</div>
 
-<div class="content">
+<div class="container">
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal modal-fixed-footer">
+    <div class="modal-content">
+      <h4>Nuevo Usuario</h4>
+      <p>Crea un nuevo usuario!</p>
+      <hr>
+      <div class="row">
+        <form class="col s12" (ngSubmit)='postUsuario()'>
+          <div class="row">
+            <div class="input-field col s6">
+              <i class="material-icons prefix">account_circle</i>
+              <input id="nombre" type="text" class="validate" data-length="50">
+              <label for="nombre">Nombre</label>
+            </div>
+            <div class="input-field col s6">
+              <i class="material-icons prefix">email</i>
+              <input id="email" type="email" class="validate">
+              <label for="email">Email</label>
+              <span class="helper-text" data-error="Correo no valido" data-success="right">Ejm: hola@gmail.com</span>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s6">
+              <i class="material-icons prefix">lock</i>
+              <input id="password" type="password" class="validate">
+              <label for="password">Password</label>
+            </div>
+            <div class="input-field col s6">
+              <i class="material-icons prefix">cake</i>
+              <input id="edad" type="number" class="validate">
+              <label for="edad">Edad</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s6">
+              <select>
+                <option value="" disabled selected>Escoje una opción</option>
+                <option value="Masculino">Masculino</option>
+                <option value="Femenino">Femenino</option>
+                <option value="Otro">Otro</option>
+              </select>
+              <label>Genero</label>
+            </div>
+            <div class="input-field col s6">
+              <select>
+                <option value="" disabled selected>Escoje una opción</option>
+                <option value="admin">Administrador</option>
+                <option value="brigadista">Brigadista</option>
+                <option value="usuario">Usuario</option>
+              </select>
+              <label>Rol</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <div class="file-field input-field">
+                <div class="btn">
+                  <span>Sube una foto</span>
+                  <input type="file" accept="image/*" (change)="uploadFile($event)">
+                </div>
+                <div class="file-path-wrapper">
+                  <input class="file-path validate" type="text">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <button class="btn waves-effect waves-light" type="submit" name="action">Crear
+              <i class="material-icons right">send</i>
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="modal-footer">  
+        <a class="modal-close waves-effect waves-red btn red"></a>
+    </div>
+  </div>
+
+<div class="container">
     <ng-template [ngIf]="addUsuario">
         <div id="modal" class="modal is-active">
             <div class="modal-background"></div>
