--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
           </div>
         </div>
         <div id="app" class="row">
-          <div *ngFor="let cardData of cardsData" class="col s3">
+          <div *ngFor="let cardData of cardsData" class="col s12 m3 l3">
             <div class="card">
               <div class="card-image">
                   <img src="{{cardData.image}}">
