--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -27,7 +27,7 @@
                 </div>
               </div>
               <div class="card-action">
-                <button class="button is-info is-outlined" [routerLink]="[cardData.redirect]">Ingresar</button>
+                <a class="waves-effect waves-light btn red darken-2" [routerLink]="[cardData.redirect]">Ingresar</a>
               </div>
             </div>
           </div>
