--- a/src/app/components/novedades/novedades.component.html
+++ b/src/app/components/novedades/novedades.component.html
@@ -2,8 +2,14 @@
 
 <div class="container">
 <h1 class="title is-2">Lista de novedades</h1>
-<a class="btn-floating btn waves-effect waves-light modal-trigger green" href="#modal1"><i class="material-icons">add</i></a>
-<button class="button is-dark is-outlined" style="margin-left: 5px;" [routerLink]="['/home']"><i class="fas fa-arrow-left" style="margin-right: 2px;"></i> Regresar</button>
+<div class="row">
+  <div class="col s8 m11 l11">
+    <a class="waves-effect waves-light btn deep-orange lighten-1" style="margin-left: 5px;" [routerLink]="['/home']"><i class="material-icons left">arrow_back</i>Regresar</a>
+  </div>
+  <div class="col s4 m1 l1">
+    <a class="btn-floating btn waves-effect waves-light modal-trigger green" href="#modal1"><i class="material-icons">add</i></a>
+  </div>
+</div>
 <hr>
 
 <div class="content">
@@ -14,7 +20,7 @@
         <th>Nº</th>
         <th>Titulo</th>
         <th>Fecha de publicación</th>
-        <th>Descripcion</th>
+        <th>Descripción</th>
         <th>Link</th>
         <th>Imagen</th>
         <th>Operaciones</th>
