--- a/src/app/components/productos/productos.component.html
+++ b/src/app/components/productos/productos.component.html
@@ -2,8 +2,14 @@
 
 <div class="container">
 <h1 class="title is-2">Lista de productos y servicios</h1>
-<a class="btn-floating btn waves-effect waves-light modal-trigger green" href="#modal1"><i class="material-icons">add</i></a>
-<button class="button is-dark is-outlined" style="margin-left: 5px;" [routerLink]="['/home']"><i class="fas fa-arrow-left" style="margin-right: 2px;"></i> Regresar</button>
+<div class="row">
+  <div class="col s8 m11 l11">
+    <a class="waves-effect waves-light btn deep-orange lighten-1" style="margin-left: 5px;" [routerLink]="['/home']"><i class="material-icons left">arrow_back</i>Regresar</a>
+  </div>
+  <div class="col s4 m1 l1">
+    <a class="btn-floating btn waves-effect waves-light modal-trigger green" href="#modal1"><i class="material-icons">add</i></a>
+  </div>
+</div>
 <hr>
 
 
@@ -28,8 +34,8 @@
         <td>{{producto.titulo}}</td>
         <td>{{producto.descripcion}}</td>
         <td>{{producto.precio}}</td>
-        <td>{{producto.observaciones}}</td>
-        <td><a href="{{producto.link}}" target="_blank">{{producto.link}}</a></td>
+        <td style="max-width: 270px; overflow: auto">{{producto.observaciones}}</td>
+        <td style="max-width: 200px; overflow: auto"><a href="{{producto.link}}" target="_blank">{{producto.link}}</a></td>
         <td><img class="img-responsive" style="max-width: 100px; max-height: 100px; min-width: 100px; min-height: 100px;" src="{{producto.imagen}}" alt=""></td>
         <td>
           <a class="btn-floating btn-small waves-effect waves-light modal-trigger yellow" (click)="updProductoForm(producto)"><i class="material-icons">mode_edit</i></a>
