--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -2,8 +2,14 @@
 
 <div class="container">
   <h1 class="title is-2">Lista de usuarios</h1>
-  <a class="btn-floating btn waves-effect waves-light modal-trigger green" href="#modal1"><i class="material-icons">add</i></a>
-  <button class="button is-dark is-outlined" style="margin-left: 5px;" [routerLink]="['/home']"><i class="fas fa-arrow-left" style="margin-right: 2px;"></i> Regresar</button>
+  <div class="row">
+    <div class="col s8 m11 l11">
+      <a class="waves-effect waves-light btn deep-orange lighten-1" style="margin-left: 5px;" [routerLink]="['/home']"><i class="material-icons left">arrow_back</i>Regresar</a>
+    </div>
+    <div class="col s4 m1 l1">
+      <a class="btn-floating btn waves-effect waves-light modal-trigger green" href="#modal1"><i class="material-icons">add</i></a>
+    </div>
+  </div>
   <hr>
 
 
@@ -16,7 +22,7 @@
           <th>Nombre</th>
           <th>Correo</th>
           <th>Edad</th>
-          <th>Genero</th>
+          <th>Género</th>
           <th>Rol</th>
           <th>Operaciones</th>
         </tr>
@@ -54,7 +60,7 @@
             <div class="input-field col s12 m6 l6">
               <i class="material-icons prefix">account_circle</i>
               <input id="nombre" name="nombre" type="text" class="validate" required minlength="6" maxlength="50" formControlName="nombre">
-              <label for="nombre">Nombre</label>
+              <label for="nombre">Nombre Completo</label>
               <div *ngIf="f.nombre.touched && !f.nombre.errors">
                 <span class="helper-text" style="color: #4CAF50;">Bien</span>
               </div>
@@ -126,7 +132,7 @@
                 <option value="Femenino">Femenino</option>
                 <option value="Otro">Otro</option>
               </select>
-              <label>Genero</label>
+              <label>Género</label>
               <div *ngIf="f.genero.touched && f.genero.errors || submitted && f.genero.errors">
                 <div *ngIf="f.genero.errors.required">
                   <span class="helper-text" style="color: #d50000;">Debe selecionar un item</span>
@@ -186,7 +192,7 @@
             <div class="input-field col s12 m6 l6">
               <i class="material-icons prefix">account_circle</i>
               <input id="nombre2" type="text" class="validate" required minlength="6" maxlength="50" formControlName="nombre" [(ngModel)]="usuarioService.selectedUsuario.nombre">
-              <label for="nombre2">Nombre</label>
+              <label for="nombre2">Nombre Completo</label>
               <div *ngIf="fp.nombre.touched && !fp.nombre.errors">
                 <span class="helper-text" style="color: #4CAF50;">Bien</span>
               </div>
@@ -258,7 +264,7 @@
                 <option value="Femenino">Femenino</option>
                 <option value="Otro">Otro</option>
               </select>
-              <label>Genero</label>
+              <label>Género</label>
               <div *ngIf="fp.genero.touched && fp.genero.errors || submitted && fp.genero.errors">
                 <div *ngIf="fp.genero.errors.required">
                   <span class="helper-text" style="color: #d50000;">Debe selecionar un item</span>
