--- a/src/app/components/page404/page404.component.html
+++ b/src/app/components/page404/page404.component.html
@@ -4,7 +4,7 @@
         <div class="column has-text-centered">
           <h1 class="title">404 Pagina no encontrada</h1>
           <p class="subtitle">Un error inesperado ha ocurrido. Por favor contacta con el dueño del sitio.</p>
-          <a class="button is-primary is-outlined" [routerLink]="['/login']">Pagina Principal</a>
+          <a class="button is-primary is-outlined" [routerLink]="['/kimirina']">Pagina Principal</a>
         </div>
         <div class="column has-text-centered">
           <img src="../../../assets/img/404-robot.gif" />
