--- a/src/app/components/productos/productos.component.html
+++ b/src/app/components/productos/productos.component.html
@@ -78,7 +78,7 @@
           </div>
           <div class="input-field col s12 m6 l6">
             <i class="material-icons prefix">attach_money</i>
-            <input id="precio" type="text" required class="validate" formControlName="precio">
+            <input id="precio" type="number" min="0" required class="validate" formControlName="precio">
             <label for="precio">Precio</label>
             <div *ngIf="f.precio.touched && !f.precio.errors">
               <span class="helper-text" style="color: #4CAF50;">Bien</span>
@@ -93,7 +93,7 @@
         <div class="row">
           <div class="input-field col s12 m12 l12">
             <i class="material-icons prefix">insert_link</i>
-            <input id="link" type="url" required class="validate" formControlName="link">
+            <input id="link" type="url" required pattern="http(s?)(:\/\/)((www.)?)(([^.]+)\.)?([a-zA-z0-9\-_]+)(.?)(\/[^\s]*)?" class="validate" formControlName="link">
             <label for="link">Url</label>
             <div *ngIf="f.link.touched && !f.link.errors">
               <span class="helper-text" style="color: #4CAF50;">Bien</span>
@@ -135,7 +135,7 @@
             <div class="file-field input-field">
               <div class="btn-small">
                 <span>Sube una imagen</span>
-                <input type="file" accept="image/*" (change)="uploadFile($event)">
+                <input type="file" accept="image/*" (change)="uploadFile($event, true)">
               </div>
               <div class="file-path-wrapper">
                 <input class="file-path validate" type="text" placeholder="Sube una imagen">
@@ -152,7 +152,7 @@
     </div>
   </div>
   <div class="modal-footer">  
-      <a class="modal-close waves-effect waves-red btn red" (click)="cerrarModal()"></a>
+      <a class="modal-close waves-effect waves-red btn red" (click)="cerrarModal(true)"></a>
   </div>
 </div>
 
@@ -183,7 +183,7 @@
           </div>
           <div class="input-field col s12 m6 l6">
             <i class="material-icons prefix">attach_money</i>
-            <input id="precio1" type="text" required class="validate" formControlName="precio" [(ngModel)]="productoService.selectedProducto.precio">
+            <input id="precio1" type="number" min="0" required class="validate" formControlName="precio" [(ngModel)]="productoService.selectedProducto.precio">
             <label for="precio1">Precio</label>
             <div *ngIf="f.precio.touched && !f.precio.errors">
               <span class="helper-text" style="color: #4CAF50;">Bien</span>
@@ -198,7 +198,7 @@
         <div class="row">
           <div class="input-field col s12 m12 l12">
             <i class="material-icons prefix">insert_link</i>
-            <input id="link1" type="url" required class="validate" formControlName="link" [(ngModel)]="productoService.selectedProducto.link">
+            <input id="link1" type="url" required pattern="http(s?)(:\/\/)((www.)?)(([^.]+)\.)?([a-zA-z0-9\-_]+)(.?)(\/[^\s]*)?" class="validate" formControlName="link" [(ngModel)]="productoService.selectedProducto.link">
             <label for="link1">Url</label>
             <div *ngIf="f.link.touched && !f.link.errors">
               <span class="helper-text" style="color: #4CAF50;">Bien</span>
@@ -241,7 +241,7 @@
             <div class="file-field input-field">
               <div class="btn-small">
                 <span>Sube una imagen</span>
-                <input type="file" accept="image/*" (change)="updateFile($event)">
+                <input type="file" accept="image/*" (change)="uploadFile($event, false)">
               </div>
               <div class="file-path-wrapper">
                 <input class="file-path validate" type="text" placeholder="Sube una imagen">
@@ -258,6 +258,6 @@
     </div>
   </div>
   <div class="modal-footer">  
-      <a class="modal-close waves-effect waves-red btn red" (click)="cerrarModalUpd()"></a>
+      <a class="modal-close waves-effect waves-red btn red" (click)="cerrarModal(false)"></a>
   </div>
 </div>
